--- a/backend/sec_server/Cargo.toml
+++ b/backend/sec_server/Cargo.toml
@@ -25,6 +25,7 @@ anyhow = "1.0.81"
 once_cell = "1.19.0"
 odbc-api = "6.0.2"
 csv = "1.3.0"
+lazy_static = "1.4.0"
 
 [build-dependencies]
 tonic-build = "0.11.0"
