--- a/backend/sec_server/Cargo.toml
+++ b/backend/sec_server/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 name = "server"
 path = "src/server.rs"
 
+[[bin]]
+name = "encrypt-test"
+path = "src/encrypt.rs"
 # [[bin]]
 # name = "mediheaven-client"
 # path = "src/client.rs"
@@ -26,6 +29,9 @@ once_cell = "1.19.0"
 odbc-api = "6.0.2"
 csv = "1.3.0"
 lazy_static = "1.4.0"
+pem = "3.0.3"
+chacha20poly1305 = "0.10.1"
+generic-array = "1.0.0"
 
 [build-dependencies]
 tonic-build = "0.11.0"
