improved chat page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -99,11 +99,13 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
+    "nedb": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
-    "simple-xmpp": "^2.3.1"
+    "simple-xmpp": "^2.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
