--- a/frontend/package.json
+++ b/frontend/package.json
@@ -96,6 +96,7 @@
     }
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
@@ -104,6 +105,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
     "simple-xmpp": "^2.3.1",
     "uuid": "^9.0.1"
   },
