--- a/backend/sec_server/Cargo.toml
+++ b/backend/sec_server/Cargo.toml
@@ -27,6 +27,10 @@ path = "src/connect_db_sample.rs"
 name = "play"
 path = "src/playground.rs"
 
+[[bin]]
+name = "shamir"
+path = "src/gen_shares.rs"
+
 [dependencies]
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 prost = "0.12"
@@ -48,6 +52,8 @@ rand = "0.8.5"
 base64 = "0.22.0"
 json = "0.12.4"
 chrono = "0.4.35"
+sharks = "0.5.0"
+hex = "0.4.3"
 
 [build-dependencies]
 tonic-build = "0.11.0"
